--- a/2019届秋招面经+面试总结+问题再答（四）.md
+++ b/2019届秋招面经+面试总结+问题再答（四）.md
@@ -8,7 +8,7 @@
 
 ​	虎牙在许多城市都有面试安排，广州是其中一个。广州场安排在大学城华工那边的中心酒店，总共有两天时间，好像是一天面技术岗一天面非技术岗。
 
-​	来到现场后先签到，然后到候场区等喊名字，面试区是一个大的宴会厅，里面有许多桌子，每桌一个对面试。
+​	来到现场后先签到，然后到候场区等喊名字，面试区是一个大的宴会厅，里面有许多桌子，每桌1个一对一面试。
 
 
 
@@ -163,7 +163,17 @@
 
 
 
+在这里附上在面试虎牙前一天我准备时写的笔记吧。针对JD来准备，上面写的内容也基本符合现在的工作内容。虽然就准备了一天，但感觉收益也还是不小的。
 
+![](G:\公众号文章\Tivi-Notes\图片素材\IMG_3688.JPG)
+
+
+
+![](G:\公众号文章\Tivi-Notes\图片素材\IMG_3689.JPG)
+
+
+
+![](G:\公众号文章\Tivi-Notes\图片素材\IMG_3690.JPG)
 
 ## 4399（游戏系统策划）
 
@@ -179,7 +189,7 @@
 
 ​	4399的线上笔试会分批进行，如果时间和自己的安排有冲突也可以申请调整批次。
 
-​	4399在面试报名阶段，会有各种免笔试的活动，比如说拉够多少个人或者分享招聘信息就可以参与，抽几个人免笔试这种。个人认为既然能通过这种形式来免笔试，那说明笔试本身的难度或者说含金量也不会太高了，其实并没有参与的必要。
+​	4399在面试报名阶段，会有各种免笔试的活动，比如说拉够多少个人或者分享招聘信息就可以参与，抽几个人免笔试这种。个人认为既然能通过这种形式来免笔试，那说明笔试本身的难度或者说含金量也不会太高了，其实并没有参与这种活动的必要。
 
 ​	印象中游戏策划的题目做下来，是做不完的，题目质量还可以，所以建议做完选择题，大题挑自己擅长得答得出彩即可，认真做基本是不可能被筛掉的。
 
